Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -11,7 +11,7 @@
 
 \title{Salami}
 \author{Hugo M. Nielsen (s214734) \and Mikael H. Hoffmann (s214753) \and Christian Valentin Kjær (s211469) \and Jacob Tuxen (s194572)}
-\date{\today}
+\date{DATE ???}
 
 \begin{document}
 
